--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ header {
   font-family: "Roboto Slab", serif;
   font-weight: 700;
   background-color: whitesmoke;
-  z-index: 2000;
-  position: sticky;
+  z-index: 3000;
+  position: fixed;
   top: 0;
 }
 
@@ -204,7 +204,7 @@ body.no-scroll {
 
 /* Sidebar scrollable independently */
 .sidebar {
-  overflow-y: auto;
+  /* overflow-y: auto; */
   -webkit-overflow-scrolling: touch; /* Smooth scroll on iOS */
 }
 
@@ -743,6 +743,13 @@ body.no-scroll {
   .hero-content p {
     font-size: medium;
   }
+}
+
+
+@media screen and (max-width:500px) {
+    main {
+        margin-top: 80px;
+    }
 }
 
 /* -------------------- */
