--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header {
   z-index: 3000;
   position: fixed;
   top: 0;
+  height: 10vh;
 }
 
 .logo img {
@@ -750,12 +751,12 @@ a {
 }
 
 main {
-    margin-top: 85px;
+    margin-top: 10vh;
 }
 
 @media screen and (max-width:500px) {
     main {
-        margin-top: 90px;
+        margin-top: 10vh;
     }
 }
 
